# django-project-template

./: .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  manage.py  pyproject.toml  start.sh
project_name/: celery.py  routers.py  settings.py  urls.py  wsgi.py
project_name/users/: api.py  serializers.py
project_name/users/migrations/: 0001_initial.py
