[tool]
[tool.poetry]
name = "project_name"
version = "0.0.0"
description = "project_name"
authors = ["Daniel Malik <hello@malik.consulting>"]

[tool.poetry.dependencies]
python = "^3.8"
celery = "*"
dj-database-url = "^0.5.0"
django = "^3.1"
django-celery-beat = "*"
django-celery-results = "*"
django-configurations = "^2.2"
django-debug-toolbar = "^2.2"
django-extensions = "^2.2.9"
django-filter = "*"
djangorestframework = "*"
drf-extensions = "*"
gunicorn = "^20.0.4"
markdown = "*"
psycopg2-binary = "^2.8.4"
whitenoise = "^5.0.1"

[tool.poetry.dev-dependencies]
werkzeug = "^1.0.0"
